force-app/main/default/objects/IPM_Information__c/IPM_Information__c.object-meta.xml
<CustomObject>
    <label>IPM Information</label>
    <nameField>
        <displayFormat>IPM Info-{0000}</displayFormat>
        <label>IPM Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPM Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>