force-app/main/default/objects/IPM_Information__c/fields/Administrative__c.field-meta.xml
<CustomField>
    <fullName>Administrative__c</fullName>
    <inlineHelpText>For implementation only - create/Maintain/Post, CDX – Initiate and post documents, AXIS Set up/Maintain AXIS, IRADs – Maintain/Post IRADs, Meeting Agendas and Notes – Draft/Distribute.</inlineHelpText>
    <label>Administrative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AXIS</fullName>
            </value>
            <value>
                <fullName>BTB</fullName>
            </value>
            <value>
                <fullName>IRADs</fullName>
            </value>
            <value>
                <fullName>Meeting Agendas</fullName>
            </value>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>CDX</fullName>
                <isActive>false</isActive>
                <label>CDX</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>