force-app/main/default/objects/IPM_Information__c/fields/Administrative_Score__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Score__c</fullName>
    <label>Administrative Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>