force-app/main/default/objects/IPM_Information__c/fields/Advocate4Me__c.field-meta.xml
<CustomField>
    <fullName>Advocate4Me__c</fullName>
    <inlineHelpText>Indicate the level of customer service that was purchased.</inlineHelpText>
    <label>Advocate4Me</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocate4Me</fullName>
                <default>true</default>
                <label>Advocate4Me</label>
            </value>
            <value>
                <fullName>Advocate4Me Elite</fullName>
            </value>
            <value>
                <fullName>Advocate4Me Premier</fullName>
            </value>
            <value>
                <fullName>Optum Connect</fullName>
            </value>
            <value>
                <fullName>AAHE</fullName>
            </value>
            <value>
                <fullName>Blackstone Equity Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>