force-app/main/default/objects/IPM_Information__c/fields/Advocate4Me_Score__c.field-meta.xml
<CustomField>
    <fullName>Advocate4Me_Score__c</fullName>
    <label>Advocate4Me Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>