force-app/main/default/objects/IPM_Information__c/fields/Anticipated_Number_of_NEW_Benefit_Sets__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Number_of_NEW_Benefit_Sets__c</fullName>
    <inlineHelpText>Select the range for the expected number of benefit sets</inlineHelpText>
    <label>Anticipated Number of NEW Benefit Sets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-30</fullName>
            </value>
            <value>
                <fullName>31-40</fullName>
            </value>
            <value>
                <fullName>41-50</fullName>
            </value>
            <value>
                <fullName>above 50</fullName>
            </value>
            <value>
                <fullName>AAHE</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>