force-app/main/default/objects/IPM_Information__c/fields/Attending_Open_Enrollment_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Attending_Open_Enrollment_Meetings__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Indicate the number of OE meetings attended.</inlineHelpText>
    <label>Attending Open Enrollment Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>