force-app/main/default/objects/IPM_Information__c/fields/Attending_Open_Enrollment_Meetings_Score__c.field-meta.xml
<CustomField>
    <fullName>Attending_Open_Enrollment_Meetings_Score__c</fullName>
    <label>Attending Open Enrollment Meetings Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>