force-app/main/default/objects/IPM_Information__c/fields/Benefit_Tiering__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Tiering__c</fullName>
    <inlineHelpText>Select type of Benefit Tiering for customer</inlineHelpText>
    <label>Benefit Tiering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS Tiering</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>