force-app/main/default/objects/IPM_Information__c/fields/Benefit_Tiering_Score__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Tiering_Score__c</fullName>
    <label>Benefit Tiering Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>