force-app/main/default/objects/IPM_Information__c/fields/C3_Score__c.field-meta.xml
<CustomField>
    <fullName>C3_Score__c</fullName>
    <label>C3/SNI Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>