force-app/main/default/objects/IPM_Information__c/fields/CERA__c.field-meta.xml
<CustomField>
    <fullName>CERA__c</fullName>
    <inlineHelpText>Does customer have CERA with Optum?</inlineHelpText>
    <label>CERA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WiredCommute</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>