force-app/main/default/objects/IPM_Information__c/fields/CERA_Score__c.field-meta.xml
<CustomField>
    <fullName>CERA_Score__c</fullName>
    <label>CERA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>