force-app/main/default/objects/IPM_Information__c/fields/COBRA_Score__c.field-meta.xml
<CustomField>
    <fullName>COBRA_Score__c</fullName>
    <label>COBRA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>