force-app/main/default/objects/IPM_Information__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IPM Informations</relationshipLabel>
    <relationshipName>IPM_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>