force-app/main/default/objects/IPM_Information__c/fields/Cross_Carrier_Set_up__c.field-meta.xml
<CustomField>
    <fullName>Cross_Carrier_Set_up__c</fullName>
    <inlineHelpText>Any non-uhc member set-up. ex. Clinical, Financial Products</inlineHelpText>
    <label>Cross-Carrier Set-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>