force-app/main/default/objects/IPM_Information__c/fields/Cross_Carrier_Set_up_Score__c.field-meta.xml
<CustomField>
    <fullName>Cross_Carrier_Set_up_Score__c</fullName>
    <label>Cross-Carrier Set-up Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>