force-app/main/default/objects/IPM_Information__c/fields/Dental__c.field-meta.xml
<CustomField>
    <fullName>Dental__c</fullName>
    <inlineHelpText>Choose the type of Dental Set-up.</inlineHelpText>
    <label>Dental</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Insured</fullName>
            </value>
            <value>
                <fullName>ASO Standard</fullName>
            </value>
            <value>
                <fullName>ASO Complex</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>