force-app/main/default/objects/IPM_Information__c/fields/Engagement_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Solutions__c</fullName>
    <inlineHelpText>Is Engagement Solutions involved?</inlineHelpText>
    <label>Engagement Solutions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>