force-app/main/default/objects/IPM_Information__c/fields/Engagement_Solutions_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Solutions_Score__c</fullName>
    <label>Engagement Solutions Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>