force-app/main/default/objects/IPM_Information__c/fields/Expected_Medical_Membership__c.field-meta.xml
<CustomField>
    <fullName>Expected_Medical_Membership__c</fullName>
    <inlineHelpText>Enter the number of expected members based on Sales estimate</inlineHelpText>
    <label>Expected Medical Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>