force-app/main/default/objects/IPM_Information__c/fields/Financial_Protection_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_Protection_Score__c</fullName>
    <label>Financial Protection Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>