force-app/main/default/objects/IPM_Information__c/fields/FlexWork__c.field-meta.xml
<CustomField>
    <fullName>FlexWork__c</fullName>
    <inlineHelpText>Was FlexWork on UHOPS purchased by customer?</inlineHelpText>
    <label>FlexWork</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>