force-app/main/default/objects/IPM_Information__c/fields/FlexWork_Score__c.field-meta.xml
<CustomField>
    <fullName>FlexWork_Score__c</fullName>
    <label>FlexWork Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>