force-app/main/default/objects/IPM_Information__c/fields/FSA_Dependent_Care_Score__c.field-meta.xml
<CustomField>
    <fullName>FSA_Dependent_Care_Score__c</fullName>
    <label>FSA - Dependent Care Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>