force-app/main/default/objects/IPM_Information__c/fields/FSA_Limited_Purpose__c.field-meta.xml
<CustomField>
    <fullName>FSA_Limited_Purpose__c</fullName>
    <inlineHelpText>Complete if customer was sold Optum Limited Purpose FSA.</inlineHelpText>
    <label>FSA - Limited Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes w/ FSA Transfer</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>