force-app/main/default/objects/IPM_Information__c/fields/HCSC__c.field-meta.xml
<CustomField>
    <fullName>HCSC__c</fullName>
    <inlineHelpText>What kind of Health Care Spending Card does customer have?</inlineHelpText>
    <label>HCSC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>