force-app/main/default/objects/IPM_Information__c/fields/HIA__c.field-meta.xml
<CustomField>
    <fullName>HIA__c</fullName>
    <inlineHelpText>Complete if customer was sold Optum Health Incentive Account.</inlineHelpText>
    <label>HIA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>