force-app/main/default/objects/IPM_Information__c/fields/History_Conversion_Transition__c.field-meta.xml
<CustomField>
    <fullName>History_Conversion_Transition__c</fullName>
    <inlineHelpText>Indicate type of history Conversion. Standard is Ded/OOP move &amp; Benefit LTM only. Complex is DED/OOP and Benefit LTM move. Highly complex is Ded/OOP and Benefit LTM move from multiple carriers.</inlineHelpText>
    <label>History Conversion/Transition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard History Transfer</fullName>
            </value>
            <value>
                <fullName>Complex History Transfer</fullName>
            </value>
            <value>
                <fullName>Highly Complex History Transfer</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>