force-app/main/default/objects/IPM_Information__c/fields/History_Conversion_Transition_Score__c.field-meta.xml
<CustomField>
    <fullName>History_Conversion_Transition_Score__c</fullName>
    <label>History Conversion/Transition Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>