force-app/main/default/objects/IPM_Information__c/fields/Hours_of_complexity__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_complexity__c</fullName>
    <label>Hours of complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>