force-app/main/default/objects/IPM_Information__c/fields/HRA_Traditional_Score__c.field-meta.xml
<CustomField>
    <fullName>HRA_Traditional_Score__c</fullName>
    <label>HRA Traditional Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>