force-app/main/default/objects/IPM_Information__c/fields/Incremental_Prdcts_Srvc_Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Prdcts_Srvc_Complexity_Score__c</fullName>
    <label>Incremental Prdcts/Srvc Complexity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>