force-app/main/default/objects/IPM_Information__c/fields/Incremental_Products_Services_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Products_Services_Complexity__c</fullName>
    <inlineHelpText>Use for unique scenarios to add complexity</inlineHelpText>
    <label>Incremental Products/Services Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple (2 hrs/wk)</fullName>
            </value>
            <value>
                <fullName>Complex (10 hrs/wk)</fullName>
            </value>
            <value>
                <fullName>Highly Complex (20 hrs/wk)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>