force-app/main/default/objects/IPM_Information__c/fields/Meetings__c.field-meta.xml
<CustomField>
    <fullName>Meetings__c</fullName>
    <inlineHelpText>Standard assumes 1 Client &amp; AMT/week, Complex Assumes 2 Client/AMT per week, High Complex assumes 3 Client/AMT mtg per week. Consultative are all internal meetings.</inlineHelpText>
    <label>Meetings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Highly Complex</fullName>
            </value>
            <value>
                <fullName>Consultative - 1 mtg/wk</fullName>
            </value>
            <value>
                <fullName>Consultative - 1 mtg/2 weeks</fullName>
            </value>
            <value>
                <fullName>Special Project 1</fullName>
            </value>
            <value>
                <fullName>Special Project 2</fullName>
            </value>
            <value>
                <fullName>Special Project 3</fullName>
            </value>
            <value>
                <fullName>Special Project 4</fullName>
            </value>
            <value>
                <fullName>Special Project 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>