force-app/main/default/objects/IPM_Information__c/fields/Months_implementing__c.field-meta.xml
<CustomField>
    <fullName>Months_implementing__c</fullName>
    <label>Months implementing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>