force-app/main/default/objects/IPM_Information__c/fields/Nexus_ACO__c.field-meta.xml
<CustomField>
    <fullName>Nexus_ACO__c</fullName>
    <inlineHelpText>Please indicate whether customer has any of the Nexus ACO plans</inlineHelpText>
    <label>Nexus ACO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>