force-app/main/default/objects/IPM_Information__c/fields/Nexus_ACO_Score__c.field-meta.xml
<CustomField>
    <fullName>Nexus_ACO_Score__c</fullName>
    <label>Nexus ACO Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>