force-app/main/default/objects/IPM_Information__c/fields/Non_Standard_Network_Set_up__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Network_Set_up__c</fullName>
    <inlineHelpText>Input the number of CSP/GSP/Extended Networks customer has</inlineHelpText>
    <label>Non-Standard Network Set-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>