force-app/main/default/objects/IPM_Information__c/fields/Non_Standard_Network_Set_up_Score__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Network_Set_up_Score__c</fullName>
    <label>Non-Standard Network Set-up Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>