force-app/main/default/objects/IPM_Information__c/fields/OBM__c.field-meta.xml
<CustomField>
    <fullName>OBM__c</fullName>
    <inlineHelpText>For Surest, indicate if OBM is used</inlineHelpText>
    <label>OBM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>