force-app/main/default/objects/IPM_Information__c/fields/of_Eligibility_File_Feeds__c.field-meta.xml
<CustomField>
    <fullName>of_Eligibility_File_Feeds__c</fullName>
    <inlineHelpText>How many and what kind of eligibility feeds does customer have?</inlineHelpText>
    <label># of Eligibility File Feeds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 non-mapping</fullName>
            </value>
            <value>
                <fullName>1 mapping</fullName>
            </value>
            <value>
                <fullName>2 non-mapping</fullName>
            </value>
            <value>
                <fullName>2 mapping</fullName>
            </value>
            <value>
                <fullName>3 non-mapping</fullName>
            </value>
            <value>
                <fullName>3 mapping</fullName>
            </value>
            <value>
                <fullName>4 non-mapping</fullName>
            </value>
            <value>
                <fullName>4 mapping</fullName>
            </value>
            <value>
                <fullName>AAHE</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>