force-app/main/default/objects/IPM_Information__c/fields/of_Eligibility_File_Feeds_Score__c.field-meta.xml
<CustomField>
    <fullName>of_Eligibility_File_Feeds_Score__c</fullName>
    <label># of Eligibility File Feeds Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>