force-app/main/default/objects/IPM_Information__c/fields/Optum_Behavioral_Health__c.field-meta.xml
<CustomField>
    <fullName>Optum_Behavioral_Health__c</fullName>
    <inlineHelpText>Please indicate which program the customer has purchased</inlineHelpText>
    <label>Optum Behavioral Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBC</fullName>
            </value>
            <value>
                <fullName>BHS</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>