force-app/main/default/objects/IPM_Information__c/fields/Optum_Behavioral_Health_Buy_Ups__c.field-meta.xml
<CustomField>
    <fullName>Optum_Behavioral_Health_Buy_Ups__c</fullName>
    <inlineHelpText>Please indicate the programs the customer has purchased</inlineHelpText>
    <label>Optum Behavioral Health Buy-Ups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life Solutions Optum</fullName>
            </value>
            <value>
                <fullName>Life Solutions plus Optum Medication Adherence</fullName>
            </value>
            <value>
                <fullName>Child Caregiver Support</fullName>
            </value>
            <value>
                <fullName>Child &amp; Family Beh. Coaching</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>