force-app/main/default/objects/IPM_Information__c/fields/Optum_Behavioral_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Optum_Behavioral_Health_Score__c</fullName>
    <label>Optum Behavioral Health Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>